--- a/package.json
+++ b/package.json
@@ -23,14 +23,19 @@
     "@heroui/system": "2.4.22",
     "@heroui/theme": "2.4.22",
     "@heroui/use-theme": "2.1.10",
+    "@js-temporal/polyfill": "^0.5.1",
     "@react-aria/visually-hidden": "3.8.27",
     "@react-types/shared": "3.32.0",
     "@tailwindcss/postcss": "4.1.11",
     "@tailwindcss/vite": "4.1.11",
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
+    "lodash": "^4.17.21",
+    "plotly.js": "^3.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-gauge-component": "^0.3.1",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "6.23.0",
     "tailwind-variants": "3.1.1",
     "tailwindcss": "4.1.11"
