--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "paths": {
       "@/*": ["./src/*"]
     },
+    
+    "allowJs": true,
+    "checkJs": false,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
